# recommendation-system-ps

./: .gitignore  README.md  pyproject.toml
recommendation_system_ps/: server.py
recommendation_system_ps/module/: __init__.py
recommendation_system_ps/module/recommendationModule/: __init__.py  recommendation_idtfs.py  recommendation_module.py
recommendation_system_ps/module/recommendationModule/agent/: class_recommendation_agent.py  classic_recommendation_agent.py  png_map_generation_agent.py  recommendation_agent.py  sight_scrapper_agent.py
