[tool.poetry]
name = "recommendation-system-ps"
version = "0.1.0"
description = ""
authors = ["Ehor Hleoza <gleoza04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-sc-kpm = "0.4.0"
py-sc-client = "0.4.0"
scikit-surprise = "^1.1.4"
numpy = "2.1.3"
scipy = "^1.14.1"
staticmap = "^0.5.7"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
